Task5/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: admin-front-end-app
  labels:
    role: admin-front-end
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: admin-back-end-app
  labels:
    role: admin-back-end
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: front-end-app
  labels:
    role: front-end
spec:
  containers:
  - name: nginx
    image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: back-end-app
  labels:
    role: back-end
spec:
  containers:
  - name: nginx
    image: nginx:latest
